Aligned text and fixed image background

--- a/src/About.css
+++ b/src/About.css
@@ -8,67 +8,70 @@
 
 .about-message-section {
     position: relative;
-    text-align: center;
+    align-items: center;
+    justify-content: center;
     width: 100%;
-    height: 713px;
+    height: 710px;
+    max-height: 710px;
     top: 134px;
-    background: linear-gradient(0deg, rgba(190, 184, 235, 0.8), rgba(190, 184, 235, 0.8)), linear-gradient(0deg, rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.05)), linear-gradient(0deg, rgba(190, 184, 235, 0.1), rgba(190, 184, 235, 0.1)), url(about.svg);
+    display: flex;
+    flex-direction: column;
+    background: linear-gradient(0deg, rgba(190, 184, 235, 0.8),
+            rgba(190, 184, 235, 0.8)), linear-gradient(0deg,
+            rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.05)),
+        linear-gradient(0deg, rgba(190, 184, 235, 0.1),
+            rgba(190, 184, 235, 0.1)), url(about.svg);
+    background-size: cover;
 }
 
 .about-title {
-    position: absolute;
     font-style: normal;
     font-weight: 700;
-    font-size: 80px;
+    font-size: 5em;
     line-height: 105px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -100%);
     color: #3D3061;
 }
 
 .about-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, 50%);
+    text-align: center;
     font-weight: 700;
-    font-size: 36px;
+    font-size: 2em;
     line-height: 47px;
     color: #3D3061;
 }
 
 .goal-message-section {
     position: relative;
-    text-align: center;
+    align-items: center;
+    justify-content: center;
     width: 100%;
-    height: 736px;
+    height: 710px;
+    max-height: 710px;
     top: 134px;
+    display: flex;
+    flex-direction: column;
     background: #FFFFFF;
 }
 
 .goal-title {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -375%);
     font-style: normal;
     font-weight: 700;
-    font-size: 60px;
+    font-size: 3.5em;
     line-height: 78px;
+    transform: translate(0%, -70%);
     color: rgba(75, 46, 131, 0.95);
 }
 
 .goal-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -40%);
+    text-align: center;
+    min-width: 10%;
+    max-width: 1000px;
+    max-height: 50%;
+    min-height: 20%;
     font-style: normal;
     font-weight: 400;
-    font-size: 40px;
+    font-size: 2em;
     line-height: 52px;
-    text-align: center;
-
+    transform: translate(0%, 10%);
     color: #676767;
 }
